Introduce Deck and modify Card to support Scryfall ID and images